# SerialCommunicator

./: .gitignore  CMakeLists.txt  SecoConfig.h.in  main.cxx  test.config  testCommands.config  ttiCPX400.config  ttiCPX400_commands.config
core/: CMakeLists.txt  CommandFactory.cc  CommandFactory.h  ExceptionFactory.cc  ExceptionFactory.h  Property.cc  Property.h  PropertyReader.cc  PropertyReader.h  Query.cc  Query.h  RichQuery.cc  RichQuery.h  SerialCommunicator.cc  SerialCommunicator.h
